# django-timescaledb

./: .gitignore  Dockerfile  MANIFEST.in  README.md  README.rst  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: base_test.yml  ci-tests.yml  python-publish.yml
example/: manage.py  requirements.txt
example/iot_example_app/: .env  asgi.py  settings.py  urls.py  wsgi.py
example/metrics/: apps.py  models.py  tests.py
example/metrics/management/commands/: load_temperature.py
example/metrics/migrations/: 0001_initial.py  0002_auto_20201221_2052.py  0003_auto_20201222_1121.py  0004_metric_device.py  0005_rename_sampletest_anothermetricfromtimescalemodel.py
example/timescale/db/backends/timescaledb/: base.py
example/timescale/db/models/: expressions.py  managers.py  models.py  querysets.py
requirements/: requirements-testing.txt
tests/: conftest.py  test_setup.py
tests/timescale_test_app/: apps.py  models.py
tests/timescale_test_app/migrations/: 0001_initial.py
timescale/: base.py  base_impl.py  expressions.py  fields.py  schema.py
timescale/db/: operations.py
timescale/db/backends/postgis/: base.py  base_impl.py  schema.py
timescale/db/backends/postgresql/: base.py  base_impl.py  schema.py
timescale/db/backends/timescaledb/: base.py
timescale/db/models/: __init__.py  aggregates.py  compression.py  expressions.py  fields.py  managers.py  models.py  querysets.py  retention.py
timescale/tests/: __init__.py  test_policies.py  test_retention_compression.py
