[metadata]
name = django-timescaledb
version = 0.2.1
description = A Django database backend for integration with TimescaleDB
long_description = file: README.rst
url = https://github.com/schlunsen/django-timescaledb
author = Rasmus Schlünsen
author_email = raller84@gmail.com
license = Apache-2.0 License  
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: